ingress/demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnetapp
  labels:
    app: aspnetapp
spec:
  selector:
    matchLabels:
       app: aspnetapp
  replicas: 1
  template:
    metadata:
      labels: 
       app: aspnetapp
    spec:
     containers:
     - image: "mcr.microsoft.com/dotnet/samples:aspnetapp"
       name: aspnetapp-image
       ports:
       - containerPort: 80
         protocol: TCP
       resources: {}
       livenessProbe:
          httpGet:
            port: 80
            path: /
          initialDelaySeconds: 10
          periodSeconds: 10
       readinessProbe:
          httpGet:
            port: 80
            path: /
          initialDelaySeconds: 10
          periodSeconds: 10
