ingress/demo/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aspnetapp
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-protocol: "http"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: aspnetapp
          servicePort: 80
